--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Deluxe Pools">
+    <meta name="google-site-verification" content="AI_uMT6bSNWkyFXD6FsKqnmrYow8UzFoU4CBUzoAwa4" />
     
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json">
