--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     
     <!-- Preload Hero Image for LCP -->
-    <link rel="preload" as="image" href="/images/pools/pool1.webp" fetchpriority="high">
+    <!-- שים כאן את הקישור המלא לתמונת Hero (בדרך כלל pool1) -->
+<link rel="preload" as="image" href="https://firebasestorage.googleapis.com/v0/b/automated-taxi-system.firebasestorage.app/o/Pools%2Fpool1.webp?alt=media&token=30ebce28-c400-449d-85ad-8ea8794d653c" fetchpriority="high">
     
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
